feat: added html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 </head>
 
 <body>
+  <h1><span>YOUR STYLE,</span><span>OUR WORK</span></h1>
+  <div class="line"></div>
+  <div class="images-container">
+    <img src="ressources/img1.jpg">
+    <img src="ressources/img2.jpg">
+    <img src="ressources/img3.jpg">
+    <img src="ressources/img4.jpg">
+    <img src="ressources/img5.jpg">
+    <img src="ressources/img6.jpg">
+    <img src="ressources/img7.jpg">
+    <img src="ressources/img8.jpg">
+  </div>
   <script src="script.js"></script>
 </body>
 
